--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
   },
   "homepage": "https://github.com/EdwinG241993/systransport-api#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
